--- a/client/views/signin-user.html
+++ b/client/views/signin-user.html
@@ -11,7 +11,7 @@
 </div>
 <div ng-show="credentials">
 	{{credentials}}
-	<div ng-controller="AuthLogoutController">
+	<div ng-controller="AuthSignoutController">
 		<input type="button" value="ออกจากระบบ" ng-click="logout()">
 	</div>
 </div>
