--- a/client/views/tableId/faculty.html
+++ b/client/views/tableId/faculty.html
@@ -1,20 +1,20 @@
 <div class="row">
 	<div class="col-md-12">
-		<!-- Custom Tabs (Pulled to the right) -->
+		<!-- Custom Tabs (Pulled to the right) -->{{data}}
 		<div class="nav-tabs-custom">
 			<ul class="nav nav-tabs pull-right">
 				<li>
-					<a href="#add" data-toggle="tab">
+					<a href="#add" data-toggle="tab" ng-click="resetData()">
 						<i class="fa fa-pencil"></i>&nbsp;แก้ไขข้อมูล
 					</a>
 				</li>
 				<li>
-					<a href="#edit" data-toggle="tab">
+					<a href="#edit" data-toggle="tab" ng-click="resetData()">
 						<i class="fa fa-plus"></i>&nbsp;เพิ่มข้อมูล
 					</a>
 				</li>
 				<li class="active">
-					<a href="#search" data-toggle="tab">
+					<a href="#search" data-toggle="tab" ng-click="resetData()">
 						<i class="fa fa-search"></i>&nbsp;ค้นหา
 					</a>
 				</li>
@@ -24,21 +24,21 @@
 				<!-- แก้ไข -->
 				<div class="tab-pane" id="add">
 					<div class="container-fluid">
-						<form name="add-form">
+						<form name="add-form" novalidate>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อคณะ/ภาควิชา" ng-model="FACULTY_NAME" required="true"></input-box>
+									<input-box label="ชื่อคณะ/ภาควิชา" ng-model="data.FACULTY_NAME" required="true"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อคณะ/ภาควิชา (En)" ng-model="FACULTY_NAME_ENG" required="false"></input-box>
+									<input-box label="ชื่อคณะ/ภาควิชา (En)" ng-model="data.FACULTY_NAME_ENG" required="false"></input-box>
 								</div>
 							</div>
 							
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อมหาวิทยาลัย" ng-model="UNIVERSITY_NAME" required="true"></input-box>
+									<input-box label="ชื่อมหาวิทยาลัย" ng-model="data.UNIVERSITY_NAME" required="true"></input-box>
 								</div>
 							</div>
 							<div class="row">
@@ -46,10 +46,10 @@
 									<div class="form-group">
 										<label for="choose-status">สถานะ : </label><br>
 										<div class="btn-group" data-toggle="buttons">
-											<label class="btn btn-primary">
+											<label class="btn btn-primary" ng-model="data.ACTIVE">
 												<input type="radio" name="status" autocomplete="off"> ใช้งาน
 											</label>
-											<label class="btn btn-primary">
+											<label class="btn btn-primary" ng-model="data.ACTIVE">
 												<input type="radio" name="status" autocomplete="off"> ไม่ใช้งาน
 											</label>
 										</div>
@@ -61,7 +61,7 @@
 								<div class="col-md-offset-3 col-md-6">
 									<div class="pull-right">
 										<button class="btn btn-success">แก้ไขข้อมูล</button>
-										<button class="btn btn-danger">ยกเลิก</button>
+										<button class="btn btn-danger" ng-click="resetData()">ยกเลิก</button>
 									</div>
 								</div>
 							</div>
@@ -72,21 +72,21 @@
 				<!-- เพิ่ม -->
 				<div class="tab-pane" id="edit">
 					<div class="container-fluid">
-						<form name="add-form">
+						<form name="add-form" novalidate>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อคณะ/ภาควิชา" ng-model="FACULTY_NAME" required="true"></input-box>
+									<input-box label="ชื่อคณะ/ภาควิชา" ng-model="data.FACULTY_NAME" required="true"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อคณะ/ภาควิชา (En)" ng-model="FACULTY_NAME_ENG" required="false"></input-box>
+									<input-box label="ชื่อคณะ/ภาควิชา (En)" ng-model="data.FACULTY_NAME_ENG" required="false"></input-box>
 								</div>
 							</div>
 							
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อมหาวิทยาลัย" ng-model="UNIVERSITY_NAME" required="true"></input-box>
+									<input-box label="ชื่อมหาวิทยาลัย" ng-model="data.UNIVERSITY_NAME" required="true"></input-box>
 								</div>
 							</div>
 							<div class="row">
@@ -94,10 +94,10 @@
 									<div class="form-group">
 										<label for="choose-status">สถานะ : </label><br>
 										<div class="btn-group" data-toggle="buttons">
-											<label class="btn btn-primary">
+											<label class="btn btn-primary" ng-model="data.ACTIVE">
 												<input type="radio" name="status" autocomplete="off"> ใช้งาน
 											</label>
-											<label class="btn btn-primary">
+											<label class="btn btn-primary" ng-model="data.ACTIVE">
 												<input type="radio" name="status" autocomplete="off"> ไม่ใช้งาน
 											</label>
 										</div>
@@ -108,8 +108,8 @@
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="pull-right">
-										<button class="btn btn-success">เพิ่มข้อมูล</button>
-										<button class="btn btn-danger">ยกเลิก</button>
+										<button class="btn btn-success" ng-click="addFaculty(data)">เพิ่มข้อมูล</button>
+										<button class="btn btn-danger" ng-click="resetData">ยกเลิก</button>
 									</div>
 								</div>
 							</div>
@@ -120,21 +120,21 @@
 				<!-- ค้นหา -->
 				<div class="tab-pane active" id="search">
 					<div class="container-fluid">
-						<form name="add-form">
+						<form name="add-form" novalidate>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อคณะ/ภาควิชา" ng-model="FACULTY_NAME" required="false"></input-box>
+									<input-box label="ชื่อคณะ/ภาควิชา" ng-model="data.FACULTY_NAME" required="false"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อคณะ/ภาควิชา (En)" ng-model="FACULTY_NAME_ENG" required="false"></input-box>
+									<input-box label="ชื่อคณะ/ภาควิชา (En)" ng-model="data.FACULTY_NAME_ENG" required="false"></input-box>
 								</div>
 							</div>
 							
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อมหาวิทยาลัย" ng-model="UNIVERSITY_NAME" required="false"></input-box>
+									<input-box label="ชื่อมหาวิทยาลัย" ng-model="data.university.UNIVERSITY_NAME" required="false"></input-box>
 								</div>
 							</div>
 							<div class="row">
@@ -142,10 +142,10 @@
 									<div class="form-group">
 										<label for="choose-status">สถานะ : </label><br>
 										<div class="btn-group" data-toggle="buttons">
-											<label class="btn btn-primary">
+											<label class="btn btn-primary" ng-click="data.ACTIVE = 1">
 												<input type="radio" name="status" autocomplete="off"> ใช้งาน
 											</label>
-											<label class="btn btn-primary">
+											<label class="btn btn-primary" ng-click="data.ACTIVE = 0">
 												<input type="radio" name="status" autocomplete="off"> ไม่ใช้งาน
 											</label>
 										</div>
@@ -156,8 +156,8 @@
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="pull-right">
-										<button class="btn btn-success">ค้นหาข้อมูล</button>
-										<button class="btn btn-danger">ยกเลิก</button>
+										<button class="btn btn-success" ng-click="getFaculty(data)">ค้นหาข้อมูล</button>
+										<button class="btn btn-danger" ng-click="resetData()">ยกเลิก</button>
 									</div>
 								</div>
 							</div>
@@ -173,3 +173,46 @@
 	</div>
 	<!-- /.col -->
 </div>
+<!--table-->
+
+<div class="row">
+	<div class="col-md-12">
+		<div class="box">
+			<div class="box-header">
+				<h3 class="box-title">ตารางข้อมูลคำนำหน้า</h3>
+			</div>
+			<!-- /.box-header -->
+			<div class="box-body">
+				<table ng-show="myValues.length > 0" ng-table="tableParams" class="table table-bordered  table-hover">
+					<tr ng-repeat="row in $data">
+						<td style="width: 1%;">
+							<input type="checkbox" class="custom-checkbox">
+						</td>
+						<td class="text-center" data-title="'ชื่อคณะ/ภาควิชา'" sortable="'FACULTY_NAME'">{{row.FACULTY_NAME}}</td>
+						<td class="text-center" data-title="'ชื่อคณะ/ภาควิชา(En)'" sortable="'FACULTY_NAME_ENG'">{{row.FACULTY_NAME_ENG}}</td>
+						<td class="text-center" data-title="'ชื่อมหาวิทยาลัย'" sortable="'university.UNIVERSITY_NAME'">{{row.university.UNIVERSITY_NAME}}</td>
+						<td class="text-center" data-title="'สถานะ'" sortable="'ACTIVE'">{{row.ACTIVE}}</td>
+					</tr>
+				</table>
+				<table class="table table-bordered  table-hover" ng-hide="myValues.length > 0">
+					<thead>
+						<tr>
+							<th class="text-center">ชื่อคณะ/ภาควิชา</th>
+							<th class="text-center">ชื่อคณะ/ภาควิชา(En)</th>
+							<th class="text-center">ชื่อมหาวิทยาลัย</th>
+							<th class="text-center">สถานะ</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td colspan="5" class="text-center">ไม่พบข้อมูล</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+			<!-- /.box-body -->
+		</div>
+		<!-- /.box -->
+	</div>
+</div>
+
