--- a/client/views/tableId/questionType.html
+++ b/client/views/tableId/questionType.html
@@ -18,32 +18,16 @@
 						<i class="fa fa-search"></i>&nbsp;ค้นหา
 					</a>
 				</li>
-				<li class="pull-left header"><i class="fa fa-th"></i>ข้อมูลคำนำหน้า</li>
+				<li class="pull-left header"><i class="fa fa-th"></i>ข้อมูลประเภทคำถาม</li>
 			</ul>
-<!--			tab-->
 			<div class="tab-content">
 				<!-- แก้ไข -->
-				<div class="tab-pane" id="add">
+				<div class="tab-pane" id="edit">
 					<div class="container-fluid">
-						<form name="search-form" novalidate>
+						<form name="edit-form" novalidate>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อมหาวิทยาลัย" ng-model="data.UNIVERSITY_NAME" required="true"></input-box>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อมหาวิทยาลัย (En)" ng-model="data.UNIVERSITY_NAME_ENG" required="false"></input-box>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ที่อยู่" ng-model="data.UNIVERSITY_ADDRESS" required="false"></input-box>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-offset-3 col-md-6">
-									<input-box label="E-mail" ng-model="data.UNIVERSITY_EMAIL" required="false"></input-box>
+									<input-box label="ชื่อประเภทคำถาม" ng-model="data.QUESTION_TYPE_NAME" required="true"></input-box>
 								</div>
 							</div>
 							<div class="row">
@@ -75,27 +59,12 @@
 					</div>
 				</div>
 				<!-- เพิ่ม -->
-				<div class="tab-pane" id="edit">
+				<div class="tab-pane" id="add">
 					<div class="container-fluid">
-						<form name="search-form" novalidate>
+						<form name="add-form" novalidate>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อมหาวิทยาลัย" ng-model="data.UNIVERSITY_NAME" required="true"></input-box>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อมหาวิทยาลัย (En)" ng-model="data.UNIVERSITY_NAME_ENG" required="false"></input-box>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ที่อยู่" ng-model="data.UNIVERSITY_ADDRESS" required="false"></input-box>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-offset-3 col-md-6">
-									<input-box label="E-mail" ng-model="data.UNIVERSITY_EMAIL" required="false"></input-box>
+									<input-box label="ชื่อประเภทคำถาม" ng-model="data.QUESTION_TYPE_NAME" required="true"></input-box>
 								</div>
 							</div>
 							<div class="row">
@@ -117,7 +86,7 @@
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="pull-right">
-										<button class="btn btn-success" ng-click="addUniversity()">เพิ่มข้อมูล</button>
+										<button class="btn btn-success" ng-click="addQuestionType(data)">เพิ่มข้อมูล</button>
 										<button class="btn btn-danger" ng-click="resetData()">ยกเลิก</button>
 									</div>
 								</div>
@@ -132,12 +101,7 @@
 						<form name="search-form" novalidate>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อมหาวิทยาลัย" ng-model="data.UNIVERSITY_NAME" required="false"></input-box>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อมหาวิทยาลัย (En)" ng-model="data.UNIVERSITY_NAME_ENG" required="false"></input-box>
+									<input-box label="ชื่อประเภทคำถาม" ng-model="data.QUESTION_TYPE_NAME" required="false"></input-box>
 								</div>
 							</div>
 							<div class="row">
@@ -159,7 +123,7 @@
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="pull-right">
-										<button class="btn btn-success" ng-click="getUniversity()">ค้นหาข้อมูล</button>
+										<button class="btn btn-success" ng-click="getQuestionType(data)">ค้นหาข้อมูล</button>
 										<button class="btn btn-danger" ng-click="resetData()">ยกเลิก</button>
 									</div>
 								</div>
@@ -183,7 +147,7 @@
 	<div class="col-md-12">
 		<div class="box">
 			<div class="box-header">
-				<h3 class="box-title">ตารางข้อมูลคำนำหน้า</h3>
+				<h3 class="box-title">ตารางข้อมูลประเภทคะแนน</h3>
 			</div>
 			<!-- /.box-header -->
 			<div class="box-body">
@@ -192,20 +156,14 @@
 						<td style="width: 1%;">
 							<input type="checkbox" class="custom-checkbox">
 						</td>
-						<td class="text-center" data-title="'ชื่อมหาวิทยาลัย'" sortable="'UNIVERSITY_NAME'">{{row.UNIVERSITY_NAME}}</td>
-						<td class="text-center" data-title="'ชื่อมหาวิทยาลัย(En)'" sortable="'UNIVERSITY_NAME_ENG'">{{row.UNIVERSITY_NAME_ENG}}</td>
-						<td class="text-center" data-title="'ที่อยู่'" sortable="'UNIVERSITY_ADDRESS'">{{row.UNIVERSITY_ADDRESS}}</td>
-						<td class="text-center" data-title="'E-Mail'" sortable="'UNIVERSITY_EMAIL'">{{row.UNIVERSITY_EMAIL}}</td>
+						<td class="text-center" data-title="'ชื่อประเภทคำถาม'" sortable="'QUESTION_TYPE_NAME'">{{row.QUESTION_TYPE_NAME}}</td>
 						<td class="text-center" data-title="'สถานะ'" sortable="'ACTIVE'">{{row.ACTIVE}}</td>
 					</tr>
 				</table>
 				<table class="table table-bordered  table-hover" ng-hide="myValues.length > 0">
 					<thead>
 						<tr>
-							<th class="text-center">ชื่อมหาวิทยาลัย</th>
-							<th class="text-center">ชื่อมหาวิทยาลัย(En)</th>
-							<th class="text-center">ที่อยู่</th>
-							<th class="text-center">E-Mail</th>
+							<th class="text-center">ชื่อประเภทคำถาม</th>
 							<th class="text-center">สถานะ</th>
 						</tr>
 					</thead>
@@ -221,4 +179,5 @@
 		<!-- /.box -->
 	</div>
 </div>
+
 
