--- a/client/views/tableId/title.html
+++ b/client/views/tableId/title.html
@@ -4,17 +4,17 @@
 		<div class="nav-tabs-custom">
 			<ul class="nav nav-tabs pull-right">
 				<li>
-					<a href="#add" data-toggle="tab">
+					<a href="#add" data-toggle="tab" ng-click="resetData()">
 						<i class="fa fa-pencil"></i>&nbsp;แก้ไขข้อมูล
 					</a>
 				</li>
 				<li>
-					<a href="#edit" data-toggle="tab">
+					<a href="#edit" data-toggle="tab" ng-click="resetData()">
 						<i class="fa fa-plus"></i>&nbsp;เพิ่มข้อมูล
 					</a>
 				</li>
 				<li class="active">
-					<a href="#search" data-toggle="tab">
+					<a href="#search" data-toggle="tab" ng-click="resetData()">
 						<i class="fa fa-search"></i>&nbsp;ค้นหา
 					</a>
 				</li>
@@ -27,36 +27,27 @@
 						<form name="search-form">
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="รหัสคำนำหน้า" ng-model="TITLE_PK" required="true"></input-box>
+									<input-box label="รหัสคำนำหน้า" ng-model="data.TITLE_CODE" required="true"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อคำนำหน้า" ng-model="TITLE_NAME" required="true"></input-box>
+									<input-box label="ชื่อคำนำหน้า" ng-model="data.TITLE_NAME" required="true"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อคำนำหน้า (En)" ng-model="TITLE_NAME_ENG" required="true"></input-box>
+									<input-box label="ชื่อคำนำหน้า (En)" ng-model="data.TITLE_NAME_ENG" required="true"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="form-group">
 										<label for="sex">เพศ :</label>
-										<select class="form-control" name="sex">
+										<select class="form-control" name="sex" ng-model="data.TITLE_SEX">
 											<option value="ชาย">ชาย</option>
 											<option value="หญิง">หญิง</option>
 										</select>
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-offset-3 col-md-6">
-									<div class="btn-group" data-toggle="buttons">
-										<label class="btn btn-primary">
-											<input type="checkbox" autocomplete="off"> คำนำหน้าทั่วไป
-										</label>
 									</div>
 								</div>
 							</div>
@@ -76,39 +67,30 @@
 				<!-- เพิ่ม -->
 				<div class="tab-pane" id="edit">
 					<div class="container-fluid">
-						<form name="search-form">
+						<form name="search-form" novalidate>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="รหัสคำนำหน้า" ng-model="TITLE_PK" required="true"></input-box>
+									<input-box label="รหัสคำนำหน้า" ng-model="data.TITLE_CODE" required="true"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อคำนำหน้า" ng-model="TITLE_NAME" required="true"></input-box>
+									<input-box label="ชื่อคำนำหน้า" ng-model="data.TITLE_NAME" required="true"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อคำนำหน้า (En)" ng-model="TITLE_NAME_ENG" required="true"></input-box>
+									<input-box label="ชื่อคำนำหน้า (En)" ng-model="data.TITLE_NAME_ENG" required="true"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="form-group">
 										<label for="sex">เพศ :</label>
-										<select class="form-control" name="sex">
+										<select class="form-control" name="sex" ng-model="data.TITLE_SEX">
 											<option value="ชาย">ชาย</option>
 											<option value="หญิง">หญิง</option>
 										</select>
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-offset-3 col-md-6">
-									<div class="btn-group" data-toggle="buttons">
-										<label class="btn btn-primary">
-											<input type="checkbox" autocomplete="off"> คำนำหน้าทั่วไป
-										</label>
 									</div>
 								</div>
 							</div>
@@ -116,7 +98,7 @@
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="pull-right">
-										<button class="btn btn-success">เพิ่มข้อมูล</button>
+										<button class="btn btn-success" ng-click="addTitle(data)">เพิ่มข้อมูล</button>
 										<button class="btn btn-danger">ยกเลิก</button>
 									</div>
 								</div>
@@ -128,27 +110,27 @@
 				<!-- ค้นหา -->
 				<div class="tab-pane active" id="search">
 					<div class="container-fluid">
-						<form name="search-form">
+						<form name="search-form" novalidate>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="รหัสคำนำหน้า" ng-model="TITLE_PK" required="false"></input-box>
+									<input-box label="รหัสคำนำหน้า" ng-model="data.TITLE_CODE" required="false"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อคำนำหน้า" ng-model="TITLE_NAME" required="false"></input-box>
+									<input-box label="ชื่อคำนำหน้า" ng-model="data.TITLE_NAME" required="false"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อคำนำหน้า (En)" ng-model="TITLE_NAME_ENG" required="false"></input-box>
+									<input-box label="ชื่อคำนำหน้า (En)" ng-model="data.TITLE_NAME_ENG" required="false"></input-box>
 								</div>
 							</div>
 							<br>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="pull-right">
-										<button class="btn btn-success">ค้นหาข้อมูล</button>
+										<button class="btn btn-success" ng-click="getTitle(data)">ค้นหาข้อมูล</button>
 										<button class="btn btn-danger">ยกเลิก</button>
 									</div>
 								</div>
@@ -177,18 +159,31 @@
 			</div>
 			<!-- /.box-header -->
 			<div class="box-body">
-				<table ng-table="tableParams" class="table table-bordered  table-hover">
-					<!--
-						<tr class="text-center">
-							<td colspan="5">ไม่พบข้อมูล</td>
-						</tr>
--->
+				<table ng-show="myValues.length > 0" ng-table="tableParams" class="table table-bordered  table-hover">
 					<tr ng-repeat="row in $data">
-						<td style="width: 1%;"><input type="checkbox" class="custom-checkbox"></td>
-						<td data-title="'ชื่อคำนำหน้า'" sortable="'TITLE_NAME'">{{row.TITLE_NAME}}</td>
-						<td data-title="'ชื่อคำนำหน้าภาษาอังกฤษ'" sortable="'TITLE_NAME_ENG'">{{row.TITLE_NAME_ENG}}</td>
-						<td data-title="'ชื่อคำนำหน้าภาษาอังกฤษ'" sortable="'TITLE_SEX'">{{row.TITLE_SEX}}</td>
+						<td style="width: 1%;">
+							<input type="checkbox" class="custom-checkbox">
+						</td>
+						<td class="text-center" data-title="'รหัสคำนำหน้า'" sortable="'TITLE_CODE'">{{row.TITLE_CODE}}</td>
+						<td class="text-center" data-title="'ชื่อคำนำหน้า'" sortable="'TITLE_NAME'">{{row.TITLE_NAME}}</td>
+						<td class="text-center" data-title="'ชื่อคำนำหน้าภาษาอังกฤษ'" sortable="'TITLE_NAME_ENG'">{{row.TITLE_NAME_ENG}}</td>
+						<td class="text-center" data-title="'เพศ'" sortable="'TITLE_SEX'">{{row.TITLE_SEX}}</td>
 					</tr>
+				</table>
+				<table class="table table-bordered  table-hover" ng-hide="myValues.length > 0">
+					<thead>
+						<tr>
+							<th class="text-center">รหัสคำนำหน้า</th>
+							<th class="text-center">ชื่อคำนำหน้า</th>
+							<th class="text-center">ชื่อคำนำหน้าภาษาอังกฤษ</th>
+							<th class="text-center">เพศ</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td colspan="4" class="text-center">ไม่พบข้อมูล</td>
+						</tr>
+					</tbody>
 				</table>
 			</div>
 			<!-- /.box-body -->
