--- a/client/views/dashboard.html
+++ b/client/views/dashboard.html
@@ -75,7 +75,7 @@
 					</li>
 					<!-- Control Sidebar Toggle Button -->
 					<li>
-						<a href="#" ng-click="logout()">ลงชื่อออก &nbsp;<i class="fa fa-sign-out"></i></a>
+						<a href="/signout" ng-click="logout()">ลงชื่อออก &nbsp;<i class="fa fa-sign-out"></i></a>
 					</li>
 				</ul>
 			</div>
@@ -100,9 +100,8 @@
 
 			<!-- Sidebar Menu -->
 			<ul class="sidebar-menu" ng-controller="navigation">
-				<li class="header">HEADER</li>
 				<!--					 Optionally, you can add icons to the links -->
-				<li class="treeview" ng-repeat="sec in nav">
+				<li class="treeview" ng-repeat="sec in adminNav">
 					<a href="#"><i class="fa" ng-class="sec.SECTION_ICON"></i> <span>{{sec.SECTION_NAME}}</span> <i class="fa fa-angle-left pull-right"></i></a>
 					<ul class="treeview-menu">
 						<li ng-repeat="li in sec.NavList"><a ui-sref="{{li.LIST_STATE}}" style="width: auto;">{{li.LIST_NAME}}</a></li>
