--- a/client/views/tableId/faculty.html
+++ b/client/views/tableId/faculty.html
@@ -1,55 +1,56 @@
 <div class="row">
 	<div class="col-md-12">
-		<!-- Custom Tabs (Pulled to the right) -->{{data}}
+		<!-- Custom Tabs (Pulled to the right) -->
 		<div class="nav-tabs-custom">
 			<ul class="nav nav-tabs pull-right">
-				<li>
-					<a href="#add" data-toggle="tab" ng-click="resetData()">
+				<li ng-class=" data.state === 'EDIT' ? 'active' : ''">
+					<a href="" data-toggle="tab" ng-click="changeState('EDIT', $event)">
 						<i class="fa fa-pencil"></i>&nbsp;แก้ไขข้อมูล
 					</a>
 				</li>
-				<li>
-					<a href="#edit" data-toggle="tab" ng-click="resetData()">
+				<li ng-class=" data.state === 'ADD' ? 'active' : ''">
+					<a href="" data-toggle="tab" ng-click="changeState('ADD', $event)">
 						<i class="fa fa-plus"></i>&nbsp;เพิ่มข้อมูล
 					</a>
 				</li>
-				<li class="active">
-					<a href="#search" data-toggle="tab" ng-click="resetData()">
+				<li ng-class=" data.state === 'SEARCH' ? 'active' : ''">
+					<a href="" data-toggle="tab" ng-click="changeState('SEARCH', $event)">
 						<i class="fa fa-search"></i>&nbsp;ค้นหา
 					</a>
 				</li>
-				<li class="pull-left header"><i class="fa fa-th"></i>ข้อมูลคำนำหน้า</li>
+				<li class="pull-left header"><i class="fa fa-th"></i>ข้อมูลคณะ/ภาควิชา</li>
 			</ul>
 			<div class="tab-content">
 				<!-- แก้ไข -->
-				<div class="tab-pane" id="add">
+				<div ng-class=" data.state === 'EDIT' ? 'tab-pane active' : 'tab-pane'" id="add">
 					<div class="container-fluid">
 						<form name="add-form" novalidate>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อคณะ/ภาควิชา" ng-model="data.FACULTY_NAME" required="true"></input-box>
+									<input-box label="ชื่อคณะ/ภาควิชา" ng-model="data.faculty.FACULTY_NAME" required="true"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อคณะ/ภาควิชา (En)" ng-model="data.FACULTY_NAME_ENG" required="false"></input-box>
+									<input-box label="ชื่อคณะ/ภาควิชา (En)" ng-model="data.faculty.FACULTY_NAME_ENG" required="false"></input-box>
 								</div>
 							</div>
-							
+
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อมหาวิทยาลัย" ng-model="data.UNIVERSITY_NAME" required="true"></input-box>
+									<input-box label="ชื่อมหาวิทยาลัย" ng-model="data.faculty.UNIVERSITY_NAME" required="true"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="form-group">
-										<label for="choose-status">สถานะ : </label><br>
+										<label for="choose-status">สถานะ : </label>
+										<br>
 										<div class="btn-group" data-toggle="buttons">
-											<label class="btn btn-primary" ng-model="data.ACTIVE">
+											<label ng-class="data.faculty.ACTIVE == 1 ? 'btn btn-primary active' : 'btn btn-primary'" ng-click="data.faculty.ACTIVE = 1">
 												<input type="radio" name="status" autocomplete="off"> ใช้งาน
 											</label>
-											<label class="btn btn-primary" ng-model="data.ACTIVE">
+											<label ng-class="data.faculty.ACTIVE == 0 ? 'btn btn-primary active' : 'btn btn-primary'" ng-click="data.faculty.ACTIVE = 0">
 												<input type="radio" name="status" autocomplete="off"> ไม่ใช้งาน
 											</label>
 										</div>
@@ -60,7 +61,7 @@
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="pull-right">
-										<button class="btn btn-success">แก้ไขข้อมูล</button>
+										<button class="btn btn-success" ng-click="saveEditFaculty(data.faculty)">แก้ไขข้อมูล</button>
 										<button class="btn btn-danger" ng-click="resetData()">ยกเลิก</button>
 									</div>
 								</div>
@@ -70,34 +71,35 @@
 					</div>
 				</div>
 				<!-- เพิ่ม -->
-				<div class="tab-pane" id="edit">
+				<div ng-class=" data.state === 'ADD' ? 'tab-pane active' : 'tab-pane'" id="edit">
 					<div class="container-fluid">
 						<form name="add-form" novalidate>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อคณะ/ภาควิชา" ng-model="data.FACULTY_NAME" required="true"></input-box>
+									<input-box label="ชื่อคณะ/ภาควิชา" ng-model="data.faculty.FACULTY_NAME" required="true"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อคณะ/ภาควิชา (En)" ng-model="data.FACULTY_NAME_ENG" required="false"></input-box>
+									<input-box label="ชื่อคณะ/ภาควิชา (En)" ng-model="data.faculty.FACULTY_NAME_ENG" required="false"></input-box>
 								</div>
 							</div>
-							
+
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อมหาวิทยาลัย" ng-model="data.UNIVERSITY_NAME" required="true"></input-box>
+									<input-box label="ชื่อมหาวิทยาลัย" ng-model="data.faculty.UNIVERSITY_NAME" required="true"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="form-group">
-										<label for="choose-status">สถานะ : </label><br>
+										<label for="choose-status">สถานะ : </label>
+										<br>
 										<div class="btn-group" data-toggle="buttons">
-											<label class="btn btn-primary" ng-model="data.ACTIVE">
+											<label class="btn btn-primary" ng-click="data.university.ACTIVE = 1">
 												<input type="radio" name="status" autocomplete="off"> ใช้งาน
 											</label>
-											<label class="btn btn-primary" ng-model="data.ACTIVE">
+											<label class="btn btn-primary" ng-click="data.university.ACTIVE = 0">
 												<input type="radio" name="status" autocomplete="off"> ไม่ใช้งาน
 											</label>
 										</div>
@@ -108,7 +110,7 @@
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="pull-right">
-										<button class="btn btn-success" ng-click="addFaculty(data)">เพิ่มข้อมูล</button>
+										<button class="btn btn-success" ng-click="addFaculty(data.faculty)">เพิ่มข้อมูล</button>
 										<button class="btn btn-danger" ng-click="resetData">ยกเลิก</button>
 									</div>
 								</div>
@@ -118,34 +120,35 @@
 					</div>
 				</div>
 				<!-- ค้นหา -->
-				<div class="tab-pane active" id="search">
+				<div ng-class=" data.state === 'SEARCH' ? 'tab-pane active' : 'tab-pane'" id="search">
 					<div class="container-fluid">
 						<form name="add-form" novalidate>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อคณะ/ภาควิชา" ng-model="data.FACULTY_NAME" required="false"></input-box>
+									<input-box label="ชื่อคณะ/ภาควิชา" ng-model="data.faculty.FACULTY_NAME" required="false"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อคณะ/ภาควิชา (En)" ng-model="data.FACULTY_NAME_ENG" required="false"></input-box>
+									<input-box label="ชื่อคณะ/ภาควิชา (En)" ng-model="data.faculty.FACULTY_NAME_ENG" required="false"></input-box>
 								</div>
 							</div>
-							
+
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อมหาวิทยาลัย" ng-model="data.university.UNIVERSITY_NAME" required="false"></input-box>
+									<input-box label="ชื่อมหาวิทยาลัย" ng-model="data.faculty.university.UNIVERSITY_NAME" required="false"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="form-group">
-										<label for="choose-status">สถานะ : </label><br>
+										<label for="choose-status">สถานะ : </label>
+										<br>
 										<div class="btn-group" data-toggle="buttons">
-											<label class="btn btn-primary" ng-click="data.ACTIVE = 1">
+											<label class="btn btn-primary" ng-click="data.faculty.ACTIVE = 1">
 												<input type="radio" name="status" autocomplete="off"> ใช้งาน
 											</label>
-											<label class="btn btn-primary" ng-click="data.ACTIVE = 0">
+											<label class="btn btn-primary" ng-click="data.faculty.ACTIVE = 0">
 												<input type="radio" name="status" autocomplete="off"> ไม่ใช้งาน
 											</label>
 										</div>
@@ -156,7 +159,7 @@
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="pull-right">
-										<button class="btn btn-success" ng-click="getFaculty(data)">ค้นหาข้อมูล</button>
+										<button class="btn btn-success" ng-click="getFaculty(data.faculty)">ค้นหาข้อมูล</button>
 										<button class="btn btn-danger" ng-click="resetData()">ยกเลิก</button>
 									</div>
 								</div>
@@ -179,40 +182,18 @@
 	<div class="col-md-12">
 		<div class="box">
 			<div class="box-header">
-				<h3 class="box-title">ตารางข้อมูลคำนำหน้า</h3>
+				<h3 class="box-title">ตารางข้อมูลคณะ/ภาควิชา</h3>
+				<div class="pull-right">
+					<button class="btn btn-info" ng-click="updateFaculty(selectedList)" ng-disabled="selectedList.length > 1">แก้ไข &nbsp;<i class="fa fa-pencil"></i></button>
+					<button class="btn btn-danger" ng-click="deleteFaculty(selectedList)">ลบข้อมูล &nbsp;<i class="fa fa-trash"></i></button>
+				</div>
 			</div>
 			<!-- /.box-header -->
 			<div class="box-body">
-				<table ng-show="myValues.length > 0" ng-table="tableParams" class="table table-bordered  table-hover">
-					<tr ng-repeat="row in $data">
-						<td style="width: 1%;">
-							<input type="checkbox" class="custom-checkbox">
-						</td>
-						<td class="text-center" data-title="'ชื่อคณะ/ภาควิชา'" sortable="'FACULTY_NAME'">{{row.FACULTY_NAME}}</td>
-						<td class="text-center" data-title="'ชื่อคณะ/ภาควิชา(En)'" sortable="'FACULTY_NAME_ENG'">{{row.FACULTY_NAME_ENG}}</td>
-						<td class="text-center" data-title="'ชื่อมหาวิทยาลัย'" sortable="'university.UNIVERSITY_NAME'">{{row.university.UNIVERSITY_NAME}}</td>
-						<td class="text-center" data-title="'สถานะ'" sortable="'ACTIVE'">{{row.ACTIVE}}</td>
-					</tr>
-				</table>
-				<table class="table table-bordered  table-hover" ng-hide="myValues.length > 0">
-					<thead>
-						<tr>
-							<th class="text-center">ชื่อคณะ/ภาควิชา</th>
-							<th class="text-center">ชื่อคณะ/ภาควิชา(En)</th>
-							<th class="text-center">ชื่อมหาวิทยาลัย</th>
-							<th class="text-center">สถานะ</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td colspan="5" class="text-center">ไม่พบข้อมูล</td>
-						</tr>
-					</tbody>
-				</table>
+				<div ui-grid="gridOptions" ui-grid-pagination ui-grid-selection style="width: auto;height: 300px;"></div>
 			</div>
 			<!-- /.box-body -->
 		</div>
 		<!-- /.box -->
 	</div>
 </div>
-
