--- a/client/views/tableId/title.html
+++ b/client/views/tableId/title.html
@@ -3,18 +3,18 @@
 		<!-- Custom Tabs (Pulled to the right) -->
 		<div class="nav-tabs-custom">
 			<ul class="nav nav-tabs pull-right">
-				<li>
-					<a href="#add" data-toggle="tab" ng-click="resetData()">
+				<li ng-class=" data.state === 'EDIT' ? 'active' : ''">
+					<a href="" data-toggle="tab" ng-click="changeState('EDIT', $event)">
 						<i class="fa fa-pencil"></i>&nbsp;แก้ไขข้อมูล
 					</a>
 				</li>
-				<li>
-					<a href="#edit" data-toggle="tab" ng-click="resetData()">
+				<li ng-class=" data.state === 'ADD' ? 'active' : ''">
+					<a href="" data-toggle="tab" ng-click="changeState('ADD', $event)">
 						<i class="fa fa-plus"></i>&nbsp;เพิ่มข้อมูล
 					</a>
 				</li>
-				<li class="active">
-					<a href="#search" data-toggle="tab" ng-click="resetData()">
+				<li ng-class=" data.state === 'SEARCH' ? 'active' : ''">
+					<a href="" data-toggle="tab" ng-click="changeState('SEARCH', $event)">
 						<i class="fa fa-search"></i>&nbsp;ค้นหา
 					</a>
 				</li>
@@ -22,29 +22,29 @@
 			</ul>
 			<div class="tab-content">
 				<!-- แก้ไข -->
-				<div class="tab-pane" id="add">
+				<div ng-class=" data.state === 'EDIT' ? 'tab-pane active' : 'tab-pane'" id="add">
 					<div class="container-fluid">
-						<form name="search-form">
+						<form name="search-form" novalidate>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="รหัสคำนำหน้า" ng-model="data.TITLE_CODE" required="true"></input-box>
+									<input-box label="รหัสคำนำหน้า" ng-model="data.title.TITLE_CODE" required="true"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อคำนำหน้า" ng-model="data.TITLE_NAME" required="true"></input-box>
+									<input-box label="ชื่อคำนำหน้า" ng-model="data.title.TITLE_NAME" required="true"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อคำนำหน้า (En)" ng-model="data.TITLE_NAME_ENG" required="true"></input-box>
+									<input-box label="ชื่อคำนำหน้า (En)" ng-model="data.title.TITLE_NAME_ENG" required="true"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="form-group">
 										<label for="sex">เพศ :</label>
-										<select class="form-control" name="sex" ng-model="data.TITLE_SEX">
+										<select class="form-control" name="sex" ng-model="data.title.TITLE_SEX">
 											<option value="ชาย">ชาย</option>
 											<option value="หญิง">หญิง</option>
 										</select>
@@ -55,8 +55,8 @@
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="pull-right">
-										<button class="btn btn-success">แก้ไขข้อมูล</button>
-										<button class="btn btn-danger">ยกเลิก</button>
+										<button class="btn btn-success" ng-click="saveEditTitle(data.title)">บันทึก</button>
+										<button class="btn btn-warning" ng-click="resetData()">ยกเลิก</button>
 									</div>
 								</div>
 							</div>
@@ -65,29 +65,29 @@
 					</div>
 				</div>
 				<!-- เพิ่ม -->
-				<div class="tab-pane" id="edit">
+				<div ng-class=" data.state === 'ADD' ? 'tab-pane active' : 'tab-pane'" id="edit">
 					<div class="container-fluid">
 						<form name="search-form" novalidate>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="รหัสคำนำหน้า" ng-model="data.TITLE_CODE" required="true"></input-box>
+									<input-box label="รหัสคำนำหน้า" ng-model="data.title.TITLE_CODE" required="true"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อคำนำหน้า" ng-model="data.TITLE_NAME" required="true"></input-box>
+									<input-box label="ชื่อคำนำหน้า" ng-model="data.title.TITLE_NAME" required="true"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อคำนำหน้า (En)" ng-model="data.TITLE_NAME_ENG" required="true"></input-box>
+									<input-box label="ชื่อคำนำหน้า (En)" ng-model="data.title.TITLE_NAME_ENG" required="true"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="form-group">
 										<label for="sex">เพศ :</label>
-										<select class="form-control" name="sex" ng-model="data.TITLE_SEX">
+										<select class="form-control" name="sex" ng-model="data.title.TITLE_SEX">
 											<option value="ชาย">ชาย</option>
 											<option value="หญิง">หญิง</option>
 										</select>
@@ -98,8 +98,8 @@
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="pull-right">
-										<button class="btn btn-success" ng-click="addTitle(data)">เพิ่มข้อมูล</button>
-										<button class="btn btn-danger">ยกเลิก</button>
+										<button class="btn btn-success" ng-click="addTitle(data.title)">เพิ่ม</button>
+										<button class="btn btn-warning">ยกเลิก</button>
 									</div>
 								</div>
 							</div>
@@ -108,30 +108,30 @@
 					</div>
 				</div>
 				<!-- ค้นหา -->
-				<div class="tab-pane active" id="search">
+				<div ng-class=" data.state === 'SEARCH' ? 'tab-pane active' : 'tab-pane'" id="search">
 					<div class="container-fluid">
 						<form name="search-form" novalidate>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="รหัสคำนำหน้า" ng-model="data.TITLE_CODE" required="false"></input-box>
+									<input-box label="รหัสคำนำหน้า" ng-model="data.title.TITLE_CODE" required="false"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อคำนำหน้า" ng-model="data.TITLE_NAME" required="false"></input-box>
+									<input-box label="ชื่อคำนำหน้า" ng-model="data.title.TITLE_NAME" required="false"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อคำนำหน้า (En)" ng-model="data.TITLE_NAME_ENG" required="false"></input-box>
+									<input-box label="ชื่อคำนำหน้า (En)" ng-model="data.title.TITLE_NAME_ENG" required="false"></input-box>
 								</div>
 							</div>
 							<br>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="pull-right">
-										<button class="btn btn-success" ng-click="getTitle(data)">ค้นหาข้อมูล</button>
-										<button class="btn btn-danger">ยกเลิก</button>
+										<button class="btn btn-success" ng-click="getTitle(data.title)">ค้นหา</button>
+										<button class="btn btn-warning">ยกเลิก</button>
 									</div>
 								</div>
 							</div>
@@ -156,35 +156,14 @@
 		<div class="box">
 			<div class="box-header">
 				<h3 class="box-title">ตารางข้อมูลคำนำหน้า</h3>
+				<div class="pull-right">
+					<button class="btn btn-info" ng-click="updateTitle(selectedList)" ng-disabled="selectedList.length > 1">แก้ไข &nbsp;<i class="fa fa-pencil"></i></button>
+					<button class="btn btn-danger" ng-click="deleteTitle(selectedList)">ลบข้อมูล &nbsp;<i class="fa fa-trash"></i></button>
+				</div>
 			</div>
 			<!-- /.box-header -->
 			<div class="box-body">
-				<table ng-show="myValues.length > 0" ng-table="tableParams" class="table table-bordered  table-hover">
-					<tr ng-repeat="row in $data">
-						<td style="width: 1%;">
-							<input type="checkbox" class="custom-checkbox">
-						</td>
-						<td class="text-center" data-title="'รหัสคำนำหน้า'" sortable="'TITLE_CODE'">{{row.TITLE_CODE}}</td>
-						<td class="text-center" data-title="'ชื่อคำนำหน้า'" sortable="'TITLE_NAME'">{{row.TITLE_NAME}}</td>
-						<td class="text-center" data-title="'ชื่อคำนำหน้าภาษาอังกฤษ'" sortable="'TITLE_NAME_ENG'">{{row.TITLE_NAME_ENG}}</td>
-						<td class="text-center" data-title="'เพศ'" sortable="'TITLE_SEX'">{{row.TITLE_SEX}}</td>
-					</tr>
-				</table>
-				<table class="table table-bordered  table-hover" ng-hide="myValues.length > 0">
-					<thead>
-						<tr>
-							<th class="text-center">รหัสคำนำหน้า</th>
-							<th class="text-center">ชื่อคำนำหน้า</th>
-							<th class="text-center">ชื่อคำนำหน้าภาษาอังกฤษ</th>
-							<th class="text-center">เพศ</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td colspan="4" class="text-center">ไม่พบข้อมูล</td>
-						</tr>
-					</tbody>
-				</table>
+				<div ui-grid="gridOptions" ui-grid-pagination ui-grid-selection style="width: auto;height: 300px;"></div>
 			</div>
 			<!-- /.box-body -->
 		</div>
