--- a/client/views/tableId/university.html
+++ b/client/views/tableId/university.html
@@ -3,58 +3,59 @@
 		<!-- Custom Tabs (Pulled to the right) -->
 		<div class="nav-tabs-custom">
 			<ul class="nav nav-tabs pull-right">
-				<li>
-					<a href="#add" data-toggle="tab" ng-click="resetData()">
+				<li ng-class=" data.state === 'EDIT' ? 'active' : ''">
+					<a href="" data-toggle="tab" ng-click="changeState('EDIT', $event)">
 						<i class="fa fa-pencil"></i>&nbsp;แก้ไขข้อมูล
 					</a>
 				</li>
-				<li>
-					<a href="#edit" data-toggle="tab" ng-click="resetData()">
+				<li ng-class=" data.state === 'ADD' ? 'active' : ''">
+					<a href="" data-toggle="tab" ng-click="changeState('ADD', $event)">
 						<i class="fa fa-plus"></i>&nbsp;เพิ่มข้อมูล
 					</a>
 				</li>
-				<li class="active">
-					<a href="#search" data-toggle="tab" ng-click="resetData()">
+				<li ng-class=" data.state === 'SEARCH' ? 'active' : ''">
+					<a href="" data-toggle="tab" ng-click="changeState('SEARCH', $event)">
 						<i class="fa fa-search"></i>&nbsp;ค้นหา
 					</a>
 				</li>
-				<li class="pull-left header"><i class="fa fa-th"></i>ข้อมูลคำนำหน้า</li>
+				<li class="pull-left header"><i class="fa fa-th"></i>ข้อมูลมหวิทยาลัย</li>
 			</ul>
-<!--			tab-->
+			<!--			tab-->
 			<div class="tab-content">
 				<!-- แก้ไข -->
-				<div class="tab-pane" id="add">
+				<div ng-class=" data.state === 'EDIT' ? 'tab-pane active' : 'tab-pane'" id="add">
 					<div class="container-fluid">
 						<form name="search-form" novalidate>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อมหาวิทยาลัย" ng-model="data.UNIVERSITY_NAME" required="true"></input-box>
+									<input-box label="ชื่อมหาวิทยาลัย" ng-model="data.university.UNIVERSITY_NAME" required="true"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อมหาวิทยาลัย (En)" ng-model="data.UNIVERSITY_NAME_ENG" required="false"></input-box>
+									<input-box label="ชื่อมหาวิทยาลัย (En)" ng-model="data.university.UNIVERSITY_NAME_ENG" required="false"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ที่อยู่" ng-model="data.UNIVERSITY_ADDRESS" required="false"></input-box>
+									<input-box label="ที่อยู่" ng-model="data.university.UNIVERSITY_ADDRESS" required="false"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="E-mail" ng-model="data.UNIVERSITY_EMAIL" required="false"></input-box>
+									<input-box label="E-mail" ng-model="data.university.UNIVERSITY_EMAIL" required="false"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="form-group">
-										<label for="choose-status">สถานะ : </label><br>
+										<label for="choose-status">สถานะ : </label>
+										<br>
 										<div class="btn-group" data-toggle="buttons">
-											<label class="btn btn-primary" ng-click="data.ACTIVE = 1">
+											<label ng-class="data.university.ACTIVE == 1 ? 'btn btn-primary active' : 'btn btn-primary'" ng-click="data.university.ACTIVE = 1">
 												<input type="radio" name="status" autocomplete="off"> ใช้งาน
 											</label>
-											<label class="btn btn-primary" ng-click="data.ACTIVE = 0">
+											<label ng-class="data.university.ACTIVE == 0 ? 'btn btn-primary active' : 'btn btn-primary'" ng-click="data.university.ACTIVE = 0">
 												<input type="radio" name="status" autocomplete="off"> ไม่ใช้งาน
 											</label>
 										</div>
@@ -65,7 +66,7 @@
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="pull-right">
-										<button class="btn btn-success">แก้ไขข้อมูล</button>
+										<button class="btn btn-success" ng-click="saveEditUniversity(data.university)">แก้ไขข้อมูล</button>
 										<button class="btn btn-danger" ng-click="resetData()">ยกเลิก</button>
 									</div>
 								</div>
@@ -75,38 +76,39 @@
 					</div>
 				</div>
 				<!-- เพิ่ม -->
-				<div class="tab-pane" id="edit">
+				<div ng-class=" data.state === 'ADD' ? 'tab-pane active' : 'tab-pane'" id="edit">
 					<div class="container-fluid">
 						<form name="search-form" novalidate>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อมหาวิทยาลัย" ng-model="data.UNIVERSITY_NAME" required="true"></input-box>
+									<input-box label="ชื่อมหาวิทยาลัย" ng-model="data.university.UNIVERSITY_NAME" required="true"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อมหาวิทยาลัย (En)" ng-model="data.UNIVERSITY_NAME_ENG" required="false"></input-box>
+									<input-box label="ชื่อมหาวิทยาลัย (En)" ng-model="data.university.UNIVERSITY_NAME_ENG" required="false"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ที่อยู่" ng-model="data.UNIVERSITY_ADDRESS" required="false"></input-box>
+									<input-box label="ที่อยู่" ng-model="data.university.UNIVERSITY_ADDRESS" required="false"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="E-mail" ng-model="data.UNIVERSITY_EMAIL" required="false"></input-box>
+									<input-box label="E-mail" ng-model="data.university.UNIVERSITY_EMAIL" required="false"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="form-group">
-										<label for="choose-status">สถานะ : </label><br>
+										<label for="choose-status">สถานะ : </label>
+										<br>
 										<div class="btn-group" data-toggle="buttons">
-											<label class="btn btn-primary" ng-click="data.ACTIVE = 1">
+											<label class="btn btn-primary" ng-click="data.university.ACTIVE = 1">
 												<input type="radio" name="status" autocomplete="off"> ใช้งาน
 											</label>
-											<label class="btn btn-primary" ng-click="data.ACTIVE = 0">
+											<label class="btn btn-primary" ng-click="data.university.ACTIVE = 0">
 												<input type="radio" name="status" autocomplete="off"> ไม่ใช้งาน
 											</label>
 										</div>
@@ -117,7 +119,7 @@
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="pull-right">
-										<button class="btn btn-success" ng-click="addUniversity()">เพิ่มข้อมูล</button>
+										<button class="btn btn-success" ng-click="addUniversity(data.university)">เพิ่มข้อมูล</button>
 										<button class="btn btn-danger" ng-click="resetData()">ยกเลิก</button>
 									</div>
 								</div>
@@ -127,28 +129,29 @@
 					</div>
 				</div>
 				<!-- ค้นหา -->
-				<div class="tab-pane active" id="search">
+				<div ng-class=" data.state === 'SEARCH' ? 'tab-pane active' : 'tab-pane'" id="search">
 					<div class="container-fluid">
 						<form name="search-form" novalidate>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อมหาวิทยาลัย" ng-model="data.UNIVERSITY_NAME" required="false"></input-box>
+									<input-box label="ชื่อมหาวิทยาลัย" ng-model="data.university.UNIVERSITY_NAME" required="false"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
-									<input-box label="ชื่อมหาวิทยาลัย (En)" ng-model="data.UNIVERSITY_NAME_ENG" required="false"></input-box>
+									<input-box label="ชื่อมหาวิทยาลัย (En)" ng-model="data.university.UNIVERSITY_NAME_ENG" required="false"></input-box>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="form-group">
-										<label for="choose-status">สถานะ : </label><br>
+										<label for="choose-status">สถานะ : </label>
+										<br>
 										<div class="btn-group" data-toggle="buttons">
-											<label class="btn btn-primary" ng-click="data.ACTIVE = 1">
+											<label class="btn btn-primary" ng-click="data.university.ACTIVE = 1">
 												<input type="radio" name="status" autocomplete="off"> ใช้งาน
 											</label>
-											<label class="btn btn-primary" ng-click="data.ACTIVE = 0">
+											<label class="btn btn-primary" ng-click="data.university.ACTIVE = 0">
 												<input type="radio" name="status" autocomplete="off"> ไม่ใช้งาน
 											</label>
 										</div>
@@ -159,7 +162,7 @@
 							<div class="row">
 								<div class="col-md-offset-3 col-md-6">
 									<div class="pull-right">
-										<button class="btn btn-success" ng-click="getUniversity()">ค้นหาข้อมูล</button>
+										<button class="btn btn-success" ng-click="getUniversity(data.university)">ค้นหาข้อมูล</button>
 										<button class="btn btn-danger" ng-click="resetData()">ยกเลิก</button>
 									</div>
 								</div>
@@ -183,42 +186,19 @@
 	<div class="col-md-12">
 		<div class="box">
 			<div class="box-header">
-				<h3 class="box-title">ตารางข้อมูลคำนำหน้า</h3>
+				<h3 class="box-title">ตารางข้อมูลมหวิทยาลัย</h3>
+				<div class="pull-right">
+					<button class="btn btn-info" ng-click="updateUniversity(selectedList)" ng-disabled="selectedList.length > 1">แก้ไข &nbsp;<i class="fa fa-pencil"></i></button>
+					<button class="btn btn-danger" ng-click="deleteUniversity(selectedList)">ลบข้อมูล &nbsp;<i class="fa fa-trash"></i></button>
+				</div>
 			</div>
 			<!-- /.box-header -->
 			<div class="box-body">
-				<table ng-show="myValues.length > 0" ng-table="tableParams" class="table table-bordered  table-hover">
-					<tr ng-repeat="row in $data">
-						<td style="width: 1%;">
-							<input type="checkbox" class="custom-checkbox">
-						</td>
-						<td class="text-center" data-title="'ชื่อมหาวิทยาลัย'" sortable="'UNIVERSITY_NAME'">{{row.UNIVERSITY_NAME}}</td>
-						<td class="text-center" data-title="'ชื่อมหาวิทยาลัย(En)'" sortable="'UNIVERSITY_NAME_ENG'">{{row.UNIVERSITY_NAME_ENG}}</td>
-						<td class="text-center" data-title="'ที่อยู่'" sortable="'UNIVERSITY_ADDRESS'">{{row.UNIVERSITY_ADDRESS}}</td>
-						<td class="text-center" data-title="'E-Mail'" sortable="'UNIVERSITY_EMAIL'">{{row.UNIVERSITY_EMAIL}}</td>
-						<td class="text-center" data-title="'สถานะ'" sortable="'ACTIVE'">{{row.ACTIVE}}</td>
-					</tr>
-				</table>
-				<table class="table table-bordered  table-hover" ng-hide="myValues.length > 0">
-					<thead>
-						<tr>
-							<th class="text-center">ชื่อมหาวิทยาลัย</th>
-							<th class="text-center">ชื่อมหาวิทยาลัย(En)</th>
-							<th class="text-center">ที่อยู่</th>
-							<th class="text-center">E-Mail</th>
-							<th class="text-center">สถานะ</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td colspan="5" class="text-center">ไม่พบข้อมูล</td>
-						</tr>
-					</tbody>
-				</table>
+				
+				<div ui-grid="gridOptions" ui-grid-pagination ui-grid-selection style="width: auto;height: 300px;"></div>
 			</div>
 			<!-- /.box-body -->
 		</div>
 		<!-- /.box -->
 	</div>
 </div>
-
